Sun Aug 16 01:10:00 2009  NARUSE, Yui  <naruse@ruby-lang.org>

	* regparse.c (add_ctype_to_cc_by_range): fix the first
	  character bigger than sb_out was dropped.

	* test/ruby/test_regexp.rb (TestRegexp#test_posix_bracket):
	  add tests for above.

Sun Aug 16 00:30:33 2009  NARUSE, Yui  <naruse@ruby-lang.org>

	* include/ruby/oniguruma.h
	  (ONIGENC_CTYPE_SPECIAL_MASK): added.
	  (ONIGENC_CTYPE_D): ditto.
	  (ONIGENC_CTYPE_S): ditto.
	  (ONIGENC_CTYPE_W): ditto.

	* regparse.c: \d, \s and \w are now non Unicode class.
	  [ruby-dev:39026]
	  (fetch_token_in_cc): use ONIGENC_CTYPE_[DSW] for \d/\s/\w.
	  (fetch_token): ditto.
	  (add_ctype_to_cc): add routines for ONIGENC_CTYPE_[DSW].
	  (parse_exp): ditto.

	* test/ruby/test_regexp.rb (TestRegexp#test_char_class):
	  add tests for above.

Sat Aug 15 10:39:53 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* parse.y (fname, string_dvar, sym, dsym, f_arglist): removed
	  duplications.

Fri Aug 14 20:03:10 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* include/ruby/ruby.h (rb_check_safe_str): deprecated.

	* ext/openssl/ossl_x509store.c (ossl_x509store_add_{file,path}):
	  replaced deprecated funtion.

Fri Aug 14 17:59:12 2009  NARUSE, Yui  <naruse@ruby-lang.org>

	* re.c (rb_reg_preprocess_dregexp): change Exception class to
	  RegexpError.

	* test/ruby/test_m17n.rb (test_regexp_usascii): follow above.

	* test/ruby/test_m17n.rb (test_regexp_embed): ditto.

Fri Aug 14 17:17:42 2009  NARUSE, Yui  <naruse@ruby-lang.org>

	* enc/Makefile.in (MKDIRS): revert r24525.

Fri Aug 14 16:28:19 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ext/digest/lib/digest/hmac.rb (Digest::HMAC#initialize): faster
	  code.

Fri Aug 14 14:31:33 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* configure.in (rubyhdrdir): fixed typo.  [ruby-dev:39079]

Fri Aug 14 00:29:22 2009  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* doc/ChangeLog-1.8.0: add forgotten entry contributed by
	  TAKAHASHI Kaoru.  [ruby-dev:39065]
