@@ -1,3 +1,9 @@
+Sun Aug 16 03:06:59 2009  Koichi Sasada  <ko1@atdot.net>
+
+	* vm_insnhelper.c (opt_eq_func): fix optimization bug.  This issue
+	  was found out and debugged with Takuto Hayashi at Security and
+	  Programming camp 2009.
+
 Sun Aug 16 01:10:00 2009  NARUSE, Yui  <naruse@ruby-lang.org>
 
 	* regparse.c (add_ctype_to_cc_by_range): fix the first
